...
    });
  }, []);
  
  return (
    <ScrollView testID="profilescreen-outer-container" style={[styles.container, { marginBottom: insets.bottom }]} contentContainerStyle={{ justifyContent: 'space-around', alignItems: 'center' }}>
        <View style={{ width: '90%', height: 560, justifyContent: 'space-around' }}>
            <Header sizeType={5}>Personal information</Header>
            <InputAvatar 
            placeholder={undefined}
            onSelect={(uri) => { 

            }}
            />
...
              reset();

              navigation.reset({
                index: 0,
                routes: [{ name: "OnboardingScreen" }]
              });
            }}>Log out</Button>
            <View style={{ marginVertical: 30, flexDirection: 'row', justifyContent: 'space-evenly' }}>
            <Button 
            border_8
            color={"white"}
            onPress={() => {
              setChangedValues({...initialValues.current});
...
