appId: host.exp.exponent
---
- openLink: exp://192.168.1.5:8081
- assertVisible:
    id: "onboardingscreen-outer-container"

- tapOn: "Type your first name here.."
- inputText: "John"

- tapOn: "Type your email here.."
- inputText: "john.doe@example.com"

- tapOn: "Next"
- assertVisible: "Little Lemon"

- tapOn:
    id: "avatar-pressable-container"
- assertVisible: "Personal information"
- assertVisible: "John"
- assertVisible: "John.doe@example.com"

- tapOn:
    id: "backbutton-outer-container"

- tapOn:
    id: "avatar-pressable-container"
- scrollUntilVisible:
    element: "Log out"

- tapOn: "Log out"
